--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@ THE SOFTWARE.
     </parent>
 
     <artifactId>ec2</artifactId>
-    <version>1.56</version>
+    <version>${revision}-oc${changelist}</version>
     <packaging>hpi</packaging>
 
     <name>Amazon EC2 plugin</name>
