--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@ THE SOFTWARE.
     </parent>
 
     <artifactId>ec2</artifactId>
-    <version>1.51</version>
+    <version>1.51-oc</version>
     <packaging>hpi</packaging>
 
     <name>Amazon EC2 plugin</name>
